--- a/about.html
+++ b/about.html
@@ -15,15 +15,15 @@
     <img src="../images/sysk-logo.webp" alt="logo of the stuff you should know podcast">
     <nav role="navigation">
       <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="episodes/episodes.html">Episodes</a></li>
+        <li><a href="../index.html" aria-label="link to home page">Home</a></li>
+        <li><a href="about.html" aria-label="link to about page">About</a></li>
+        <li><a href="episodes/episodes.html" aria-label="link to episodes page">Episodes</a></li>
       </ul>
     </nav>
 
 
   </header>
-  <main>
+  <main role="main">
     <!-- Add an element that represents the main content of the page -->
 
     <!-- Include a tag that groups the 'About' content -->
@@ -81,7 +81,7 @@
 
   </main>
 
-  <footer>
+  <footer role="contentinfo">
     <p><small>&copy; SYSK 2023
       </small></p>
   </footer>
