--- a/episodes/doppelgangers.html
+++ b/episodes/doppelgangers.html
@@ -15,11 +15,12 @@
     <img src="../images/sysk-logo.webp" alt="logo of the stuff you should know podcast">
     <nav role="navigation">
       <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../about.html">About</a></li>
-        <li><a href="episodes.html">Episodes</a></li>
+        <li><a href="../index.html" aria-label="link to home page">Home</a></li>
+        <li><a href="about.html" aria-label="link to about page">About</a></li>
+        <li><a href="episodes/episodes.html" aria-label="link to episodes page">Episodes</a></li>
       </ul>
     </nav>
+
 
 
   </header>
