--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -15,16 +15,17 @@
     <img src="../images/sysk-logo.webp" alt="logo of the stuff you should know podcast">
     <nav role="navigation">
       <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../about.html">About</a></li>
-        <li><a href="episodes.html">Episodes</a></li>
+        <li><a href="../index.html" aria-label="link to home page">Home</a></li>
+        <li><a href="about.html" aria-label="link to about page">About</a></li>
+        <li><a href="episodes/episodes.html" aria-label="link to episodes page">Episodes</a></li>
       </ul>
     </nav>
 
 
+
   </header>
 
-  <main>
+  <main role="main">
     
 
     <!-- Main heading for the page -->
@@ -41,7 +42,7 @@
 
   </main>
 
- <footer>
+ <footer role="contentinfo">
   <p><small>&copy; SYSK 2023
   </small></p>
  </footer> 
