--- a/episodes/everyday-phrases.html
+++ b/episodes/everyday-phrases.html
@@ -15,81 +15,85 @@
     <img src="../images/sysk-logo.webp" alt="logo of the stuff you should know podcast">
     <nav role="navigation">
       <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../about.html">About</a></li>
-        <li><a href="episodes.html">Episodes</a></li>
+        <li><a href="../index.html" aria-label="link to home page">Home</a></li>
+        <li><a href="about.html" aria-label="link to about page">About</a></li>
+        <li><a href="episodes/episodes.html" aria-label="link to episodes page">Episodes</a></li>
       </ul>
     </nav>
 
 
+
   </header>
 
-  <main>
+  <main role="main">
+
+
+    <section>
+      <!-- Include a tag that groups the information about this particular podcast -->
+  
+      <!-- Display image relevant to topic -->
+      <img src="../images/everyday-phrases.jpeg" alt="image of everyday phrases podcast cover art">
+      <!-- Main heading for the page -->
+      <h1>Interesting Origins of Everday Phrases
+      </h1>
+      <p>December 15, 2022 49 min</p>
+  
+      <p>We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell
+        everyone what they found. That’s the gist of this episode!
+      </p>
+      <!-- Link to external url: https://www.iheart.com/podcast/105-stuff-you-should-know-26940277/episode/interesting-origins-of-everyday-phrases-106017958/   -->
+     <a href="https://www.iheart.com/podcast/105-stuff-you-should-know-26940277/episode/interesting-origins-of-everyday-phrases-106017958/" aria-label="link to iheart radio podcast everyday phrases">Click here to play episode on iHeart</a> 
+  
+  
+  
+    </section>
+  
+    <!-- Include a tag that groups the other two podcasts -->
+    <section>
+      <!-- Section heading -->
+      <h2>You might also like...</h2>
+  
+      <!-- Include a tag for independent, self-contained content content -->
+  
+      <!-- Section sub-heading -->
+      <h3>The History of Fake Towns
+      </h3>
+      <img src="../images/fake-towns.jpeg" alt="image of fake towns podcast cover art">
+      <!-- Display image relevant to topic -->
+  
+      <p>There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic
+        suburb Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
+      </p>
+      <!-- Link to existing html page within episodes directory; relevant to topic -->
+     <a href="fake-towns.html" aria-label="link to fake towns podcast page">Learn more</a> 
+  
+  
+      <!-- Include a tag for independent, self-contained content content -->
+  
+      <!-- Section sub-heading -->
+      <h3>Doppelgängers: Hey you, you're me!
+      </h3>
+      <img src="../images/doppelgangers.jpeg" alt="image of doppelgangers podcast cover art">
+      <!-- Display image relevant to topic -->
+  
+      <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there
+        could!
+      </p>
+      <!-- Link to existing html page within episodes directory; relevant to topic -->
+     <a href="doppelgangers.html" aria-label="link to doppelgangers podcast page">Learn more
+    </a> 
+  
+    </section>
+
 
 
   </main>
 
-  <section>
-    <!-- Include a tag that groups the information about this particular podcast -->
-
-    <!-- Display image relevant to topic -->
-    <img src="../images/everyday-phrases.jpeg" alt="image of everyday phrases podcast cover art">
-    <!-- Main heading for the page -->
-    <h1>Interesting Origins of Everday Phrases
-    </h1>
-    <p>December 15, 2022 49 min</p>
-
-    <p>We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell
-      everyone what they found. That’s the gist of this episode!
-    </p>
-    <!-- Link to external url: https://www.iheart.com/podcast/105-stuff-you-should-know-26940277/episode/interesting-origins-of-everyday-phrases-106017958/   -->
-   <a href="https://www.iheart.com/podcast/105-stuff-you-should-know-26940277/episode/interesting-origins-of-everyday-phrases-106017958/" aria-label="link to iheart radio podcast everyday phrases">Click here to play episode on iHeart</a> 
-
-
-
-  </section>
-
-  <!-- Include a tag that groups the other two podcasts -->
-  <section>
-    <!-- Section heading -->
-    <h2>You might also like...</h2>
-
-    <!-- Include a tag for independent, self-contained content content -->
-
-    <!-- Section sub-heading -->
-    <h3>The History of Fake Towns
-    </h3>
-    <img src="../images/fake-towns.jpeg" alt="image of fake towns podcast cover art">
-    <!-- Display image relevant to topic -->
-
-    <p>There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic
-      suburb Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
-    </p>
-    <!-- Link to existing html page within episodes directory; relevant to topic -->
-   <a href="fake-towns.html" aria-label="link to fake towns podcast page">Learn more</a> 
-
-
-    <!-- Include a tag for independent, self-contained content content -->
-
-    <!-- Section sub-heading -->
-    <h3>Doppelgängers: Hey you, you're me!
-    </h3>
-    <img src="../images/doppelgangers.jpeg" alt="image of doppelgangers podcast cover art">
-    <!-- Display image relevant to topic -->
-
-    <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there
-      could!
-    </p>
-    <!-- Link to existing html page within episodes directory; relevant to topic -->
-   <a href="doppelgangers.html" aria-label="link to doppelgangers podcast page">Learn more
-  </a> 
-
-  </section>
 
 
 
   <!-- Include the tag for footer content -->
-  <footer>
+  <footer role="contentinfo">
     <p><small> &copy; SYSK 2023
       </small></p>
 
