--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <img src="../images/sysk-logo.webp" alt="logo of the stuff you should know podcast">
     <nav role="navigation">
       <ul>
-        <li><a href="about.html">About</a></li>
-        <li><a href="episodes/episodes.html">Episodes</a></li>
+        <li><a href="about.html" aria-label="link to about page">About</a></li>
+        <li><a href="episodes/episodes.html" aria-label="link to episodes page">Episodes</a></li>
       </ul>
     </nav>
 
