--- a/episodes/doppelgangers.html
+++ b/episodes/doppelgangers.html
@@ -16,8 +16,8 @@
     <nav role="navigation">
       <ul>
         <li><a href="../index.html" aria-label="link to home page">Home</a></li>
-        <li><a href="about.html" aria-label="link to about page">About</a></li>
-        <li><a href="episodes/episodes.html" aria-label="link to episodes page">Episodes</a></li>
+        <li><a href="../about.html" aria-label="link to about page">About</a></li>
+        <li><a href="episodes.html" aria-label="link to episodes page">Episodes</a></li>
       </ul>
     </nav>
 
